[gd_scene load_steps=26 format=2]

[ext_resource path="res://interface/NewAbilityBar2.gd" type="Script" id=1]
[ext_resource path="res://TriTextureProgress.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/interfaces/bar/ability/new-2/ability.png" type="Texture" id=3]
[ext_resource path="res://assets/interfaces/bar/ability/new-2/loss.png" type="Texture" id=4]
[ext_resource path="res://assets/interfaces/bar/ability/new-2/bgd.png" type="Texture" id=5]
[ext_resource path="res://assets/interfaces/bar/ability/new-2/forground.png" type="Texture" id=6]
[ext_resource path="res://assets/interfaces/bar/ability/new-2/partial.png" type="Texture" id=7]
[ext_resource path="res://assets/interfaces/bar/ability/new-2/white-indicator.png" type="Texture" id=8]
[ext_resource path="res://assets/interfaces/bar/ability/new-2/count-bgd.png" type="Texture" id=9]
[ext_resource path="res://fonts/roboto_24.tres" type="DynamicFontData" id=10]
[ext_resource path="res://interface/stage/matchCountdown.gd" type="Script" id=11]
[ext_resource path="res://particles/magicalGlow.tscn" type="PackedScene" id=12]
[ext_resource path="res://particles/one-shot-particles.gd" type="Script" id=13]
[ext_resource path="res://assets/interfaces/bar/ability/new-1/chunk-bgd.png" type="Texture" id=14]
[ext_resource path="res://assets/interfaces/bar/ability/new-1/beige.png" type="Texture" id=15]

[sub_resource type="DynamicFont" id=1]
size = 60
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=2]
size = 35
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 10 )

[sub_resource type="CanvasItemMaterial" id=3]
blend_mode = 1

[sub_resource type="Curve" id=4]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0.0300374, -175.032 ), 0.0, 0.0, 0, 0, Vector2( 0.39498, -86.328 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="Gradient" id=6]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0, 0 ), 0.0, 5.68962, 0, 0, Vector2( 0.993592, 0.4076 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=10]
emission_shape = 2
emission_box_extents = Vector3( 30, 10, 1 )
flag_disable_z = true
gravity = Vector3( 0, -98, 0 )
angular_velocity = 300.0
angular_velocity_random = 1.0
angular_velocity_curve = SubResource( 5 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 360.0
angle_random = 1.0
scale = 0.8
scale_random = 0.3
scale_curve = SubResource( 9 )
color_ramp = SubResource( 7 )

[node name="NewAbilityBar" type="Node2D"]
script = ExtResource( 1 )

[node name="mainBar" parent="." instance=ExtResource( 2 )]
underBarBlinkFrequency = 2.0
mainProgressTexture = ExtResource( 3 )
underProgressTexture = ExtResource( 4 )
backgroundProgressTexture = ExtResource( 5 )
foregroundProgressTexture = ExtResource( 6 )
middleBarTexture = ExtResource( 7 )

[node name="main-bar-ref" type="Sprite" parent="mainBar"]
texture = ExtResource( 3 )
centered = false

[node name="cost-indicator" type="TextureProgress" parent="."]
margin_right = 963.0
margin_bottom = 183.0
value = 100.0
texture_progress = ExtResource( 8 )

[node name="numChunksBgd" type="Sprite" parent="."]
position = Vector2( 91.5, 91.5 )
z_index = 2
texture = ExtResource( 9 )

[node name="HBoxContainer" type="HBoxContainer" parent="numChunksBgd"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -809.86
margin_top = -120.867
margin_right = 690.14
margin_bottom = -25.867
rect_min_size = Vector2( 1500, 0 )
alignment = 1

[node name="chunkCountLabel" type="Label" parent="numChunksBgd/HBoxContainer"]
margin_left = 715.0
margin_top = 12.0
margin_right = 785.0
margin_bottom = 83.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "24"
script = ExtResource( 11 )
transparencyAnimationDelay = 0.4
transparencyAnimationDuration = 0.3
growAnimationDuration = 0.3
ungrowAnimationDuration = 0.3

[node name="HBoxContainer2" type="HBoxContainer" parent="numChunksBgd"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -809.86
margin_top = -72.867
margin_right = 690.14
margin_bottom = 22.133
rect_min_size = Vector2( 1500, 0 )
alignment = 1

[node name="chunkCostLabel" type="Label" parent="numChunksBgd/HBoxContainer2"]
margin_left = 730.0
margin_top = 26.0
margin_right = 770.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "24"
script = ExtResource( 11 )
transparencyAnimationDelay = 0.4
transparencyAnimationDuration = 0.3
growAnimationDuration = 0.3
ungrowAnimationDuration = 0.3

[node name="abilityCancelParticles" parent="numChunksBgd" instance=ExtResource( 12 )]
material = SubResource( 3 )
position = Vector2( 1.83551, 2.66727 )
amount = 60
lifetime = 3.0
speed_scale = 3.5
process_material = SubResource( 10 )
script = ExtResource( 13 )

[node name="chunk" type="TextureProgress" parent="."]
margin_left = -80.0
margin_top = 195.0
margin_right = 272.0
margin_bottom = 235.0
rect_scale = Vector2( 1, 0.5 )
step = 0.5
value = 100.0
texture_under = ExtResource( 14 )
texture_progress = ExtResource( 15 )
